tests/compile-pass/ffi_union_repr_c.lm
@repr(C)
union U {
  a: U32,
  b: [U8; 4],
}

fn main() {
  let mut u: U = U { a: 0 as U32 };
  unsafe {
    u.a = 42 as U32;
    let _x = u.b;
  }
}
